# accept

./: .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .syntastic_cpp_config  CMakeLists.txt  LICENSE  Makefile  README.md  accept.mk  activate.sh  build.sh  enerc_build.sh  llvm_build.sh  mkdocs.yml  requirements.txt  setup.sh
accept/: commands.py  core.py  cwmemo.py  experiments.py  uncertain.py
apps/: Makefile  app.mk  build.sh  util.sh
apps/SQLite3/: Makefile
apps/blackscholes/: Makefile  blackscholes.c  build.sh  eval.py  log.txt  oldlog.txt
apps/canneal/: AtomicPtr.h  Makefile  MersenneTwister.h  annealer_thread.cpp  annealer_thread.h  eval.py  main.cpp  netlist.cpp  netlist_elem.cpp  netlist_elem.h  parsec_barrier.bc  parsec_barrier.ll  rng.h
apps/ccv/: Makefile  eval.py  log.txt
apps/cpptest/: Makefile  build.sh  cpptest.cpp
apps/debug/: Makefile  debug.cpp  eval.py
apps/fft/: Makefile  complex.h  fft.c
apps/fluidanimate/: Makefile  accept-npuArrayArgs-info.txt  eval.py  fluid.hpp  fluidcmp  fluidcmp.cpp  log.txt  pthreads.cpp  setup.sh
apps/inversek2j/: Makefile  inversek2j.c
apps/jean-pierre/: Makefile  Makefile~  callgraph.dot  chi2.cpp  distri.cpp  eval.py  eval.py~  fdistri.cpp  fstat(original).cpp  gamma(original).cpp  gamma.cpp  gamma.cpp~  ibeta.cpp  moment.cpp  momnts.cpp  normal.cpp  prob.cpp  simlp.cpp  stats.cpp  stats.h  student.cpp  tmdian.cpp  tmdian1.cpp  tmoment.cpp  tnormal.cpp  tstats.cpp
apps/jmeint/: Makefile  tritri.c
apps/jpeg/: Makefile  build.sh  config.h  datatype.h  dct.c  encoder.c  eval.py  huffdata.h  huffman.c  jpeg.c  markdata.h  marker.c  prototype.h  quant.c  quantdata.h  rgbimage.c  rgbimage.h
apps/lib/: lscript.ld  npu.h  profile.h
apps/msp430-accel/: Makefile  accel.c  dlwisp41.h  eval.py  moo.h
apps/msp430-activityrec/: AR.c  AR_train.c  Accelerometer.c  Accelerometer.h  CUEAR_binnednaivebayes.c  CUEAR_binnednaivebayes.h  CUEAR_featurizer.c  CUEAR_featurizer.h  FeatureVector.c  FeatureVector.h  Makefile  NormalDistributionModel.c  NormalDistributionModel.h  PERSON_featurizer.c  PERSON_featurizer.h  Person.c  Person.h  THERM_featurizer.c  Thermometer.c  Thermometer.h  VarianceDetector.c  VarianceDetector.h  acctest.c  adc_sensor.c  adxl362z.c  adxl362z.h  ar.c  eval.py  int_stationary_model.h  int_walking_model.h  int_wisp5_flapping.h  int_wisp5_stationary.h  intr.c  lowpower_ar.c  parsereadings.py  readings5k.h  stationary_model.h  temp_sensor.c  training_stationary_1400samples_mean_stddev.txt  training_walking_2400samples_mean_stddev.txt  (+3 more)
apps/msp430-looper/: Makefile  looper.c
apps/msp430-strawman/: Makefile  eval.py  msp430-strawman.c  testout.txt
apps/npu-sobel/: convolution.c  rgb_image.c
apps/sobel/: Makefile  build.sh  eval.py  i1.pgm  mypgm.h  sobel.c
apps/strawman/: Makefile  build.sh  strawman.c
apps/strawman2/: Makefile  (+2 more)
checker/: CMakeLists.txt  EnerCTypeChecker.cpp  TyperVisitor.h
checkerlib/: CMakeLists.txt  NodeTyper.cpp  NodeTyper.h  TyperConsumer.cpp  TyperConsumer.h  TyperVisitor.h
docs/: cli.md  hack.md  index.md  trouble.md  tutorial.md
enerc-apps/: build.sh
enerc-checker/: CMakeLists.txt  NodeTyper.h  TyperConsumer.cpp  TyperConsumer.h
enerc-pass/: enerc.cpp
include/: enerc.h
liberror/: Makefile  README  dram.cpp  dram.hpp  flikker.cpp  flikker.hpp  liberror.cpp  liberrorarch.h  liberrorutil.h  lva.cpp  lva.hpp  npu.cpp  npu.hpp  overscaledalu.cpp  overscaledalu.hpp  reducedprecfp.cpp  reducedprecfp.hpp  sram.cpp  sram.hpp
modified_LLVM_files/: BasicAliasAnalysis.cpp  TypeBasedAliasAnalysis.cpp
npu_compiler/: mif_binary.sh  nn2snnap.sh  npu_compiler.py  sigmoid.inc.template
pass/: CMakeLists.txt  accept.h  acceptaa.cpp  approxinfo.cpp  asr.cpp  bbcount.cpp  desync.cpp  enerc.cpp  error.cpp  instrument.cpp  liberror.cpp  liberror.h  log.cpp  loopperf.cpp  npu.cpp  nullify.cpp  registration.cpp  snnap.cpp  testpass.cpp  transform.cpp
plat/: zynqrun.sh
rt/: CMakeLists.txt  Makefile  acceptrt.c  acceptrt.default.c  acceptrt.fann.c  acceptrt.msp430.c  acceptrt.zynq.c  enercrt.c  npu.c  npu.h
test/: dump.sh  failing_funcptr.c  failing_redecl.c  failing_warning.c  lit.cfg  runtests.sh  test_codegen.c  test_codegen_array.c  test_codegen_retval.c  test_cxx.cpp  test_cxx2.cpp  test_endorse.c  test_errors.c  test_implicit.c  test_math.c  test_noerrors.c  test_pointers.c  test_proto.c
tracer/: CMakeLists.txt  ExtensibleInterpreter.cpp  ExtensibleInterpreter.h  enerci.cpp
(+585 files in other folders)
